# axum-backend

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  README.md  local_axum.session.sql
.cargo/: config.toml
backup/: ctx.rs
backup/mw_auth/: mod.rs
backup/routes_login/: mod.rs
deployment/: docker-compose-dev.yaml  docker-compose.yaml
examples/: gen_key.rs  quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql  01-craete-schemas.sql  02-dev-seed.sql
src/: config.rs  ctx.rs  error.rs  main.rs  prelude.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: mod.rs
src/error/: mod.rs
src/logger/: mod.rs
src/model/: base.rs  error.rs  mod.rs  projects.rs  task.rs  user.rs
src/model/crypt/: error.rs  mod.rs  pwd.rs
src/model/store/: error.rs  mod.rs
src/utils/: dir_entry_froms.rs  error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
src/web/mw_auth/: mod.rs
src/web/routes_login/: mod.rs
src/web/routes_tickets/: mod.rs
src/web/rpc/: mod.rs  project_rpc.rs  task_rpc.rs
tests/: quick_dev.rs
